~ minor changes